--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "server": "nodemon server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "render-build":"npm install && npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
