--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "stream-http": "^3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "build": "cd client && react-scripts build",
     "test": "react-scripts test",
