--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^18.20.2",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
